{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 35,
  "lineage": "129d8cc6-7842-b883-0b7d-8d3f0350e4e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyFirstInstnace",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:104398007503:instance/i-0752a4a4561a66866",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0752a4a4561a66866",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "levelup_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-052458d81738ae5f9"
              }
            ],
            "primary_network_interface_id": "eni-052458d81738ae5f9",
            "private_dns": "ip-10-0-2-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.34",
            "public_dns": "ec2-34-237-140-204.compute-1.amazonaws.com",
            "public_ip": "34.237.140.204",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00e89cb061542d3df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e4157aecfbbc231",
            "tags": {
              "Name": "custom_instance"
            },
            "tags_all": {
              "Name": "custom_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000980aa63e480a4b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "i-0752a4a4561a66866",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.levelup_key",
            "aws_security_group.allow-levelup-ssh",
            "aws_subnet.levelupvpc-public-2",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "levelup-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:internet-gateway/igw-05c5674817d55b9a7",
            "id": "igw-05c5674817d55b9a7",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "tags": {
              "Name": "levelup-gw"
            },
            "tags_all": {
              "Name": "levelup-gw"
            },
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "levelup-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:route-table/rtb-0be77086e56328bfa",
            "id": "rtb-0be77086e56328bfa",
            "owner_id": "104398007503",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c5674817d55b9a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "levelup-public-1"
            },
            "tags_all": {
              "Name": "levelup-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "rtb-0be77086e56328bfa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781b827b274b7ac8",
            "region": "us-east-1",
            "route_table_id": "rtb-0be77086e56328bfa",
            "subnet_id": "subnet-049798894179dd604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa39fdedd4519445",
            "region": "us-east-1",
            "route_table_id": "rtb-0be77086e56328bfa",
            "subnet_id": "subnet-06e4157aecfbbc231"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-2",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c814a3b4938b9dfb",
            "region": "us-east-1",
            "route_table_id": "rtb-0be77086e56328bfa",
            "subnet_id": "subnet-09ace398b9e3dd57b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-3",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-levelup-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:security-group/sg-000980aa63e480a4b",
            "description": "security group that allows ssh connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000980aa63e480a4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-levelup-ssh",
            "name_prefix": "",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-levelup-ssh"
            },
            "tags_all": {
              "Name": "allow-levelup-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sg-000980aa63e480a4b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-006917bbdf129374d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006917bbdf129374d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-private-1"
            },
            "tags_all": {
              "Name": "levelupvpc-private-1"
            },
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-006917bbdf129374d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-0359c5fa18950efe5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0359c5fa18950efe5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-private-2"
            },
            "tags_all": {
              "Name": "levelupvpc-private-2"
            },
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0359c5fa18950efe5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-0dc4bacbacd5356ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc4bacbacd5356ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-private-3"
            },
            "tags_all": {
              "Name": "levelupvpc-private-3"
            },
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0dc4bacbacd5356ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-049798894179dd604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049798894179dd604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-public-1"
            },
            "tags_all": {
              "Name": "levelupvpc-public-1"
            },
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-049798894179dd604",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-06e4157aecfbbc231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e4157aecfbbc231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-public-2"
            },
            "tags_all": {
              "Name": "levelupvpc-public-2"
            },
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-06e4157aecfbbc231",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-09ace398b9e3dd57b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ace398b9e3dd57b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc-public-3"
            },
            "tags_all": {
              "Name": "levelupvpc-public-3"
            },
            "vpc_id": "vpc-03bba1bba513f9d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-09ace398b9e3dd57b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "levelupvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:vpc/vpc-03bba1bba513f9d01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0773ff1ae3ca63b6a",
            "default_route_table_id": "rtb-03e8f97f54165f46a",
            "default_security_group_id": "sg-05e07a0eabef2a98e",
            "dhcp_options_id": "dopt-0cc6d18ca1e4f3013",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03bba1bba513f9d01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e8f97f54165f46a",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc"
            },
            "tags_all": {
              "Name": "levelupvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "vpc-03bba1bba513f9d01",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}